--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
     compileOnly 'org.apache.httpcomponents:httpclient:4.5.13'
 }
